add register page and interfaces

--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -14,4 +14,5 @@
     </fieldset>
     <button i18n [disabled]="loading" type="submit">Gönder</button>
   </form>
+  <a i18n [routerLink]="['/auth/register']">Hesabın yok mu? Kayıt Ol</a>
 </main>
